# framework.appfw.app2sd

./: CMakeLists.txt
TC/: build.sh  com.samsung.calculator-0.1.36-1.armv7l.rpm
TC/unit/: Makefile  tslist  utc_ApplicationFW_app2ext_deinit_func.c  utc_ApplicationFW_app2ext_get_app_location_func.c  utc_ApplicationFW_app2ext_init_func.c  utc_ApplicationFW_app2ext_move_func.c  utc_ApplicationFW_app2ext_post_install_func.c  utc_ApplicationFW_app2ext_post_uninstall_func.c  utc_ApplicationFW_app2ext_post_upgrade_func.c  utc_ApplicationFW_app2ext_pre_install_func.c  utc_ApplicationFW_app2ext_pre_uninstall_func.c  utc_ApplicationFW_app2ext_pre_upgrade_func.c
inc/: app2ext_interface.h
packaging/: app2sd.spec
plugin/app2sd/: CMakeLists.txt
plugin/app2sd/inc/: app2sd_internals.h
plugin/app2sd/src/: app2sd_interface.c  app2sd_internals.c  app2sd_internals_registry.c  app2sd_internals_utils.c
src/: app2ext_interface.c
test/: CMakeLists.txt  TC_app2ext.c  TCapp2ext.spec
