CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(TCapp2ext C)

SET(SOURCE_DIR ${CMAKE_SOURCE_DIR})

SET(SRCS
	${SOURCE_DIR}/TC_app2ext.c
)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/inc)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED app2sd aul)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIE ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g -Wall -Wextra")
SET(CMAKE_C_FLAGS_RELEASE "-O3")

ADD_EXECUTABLE(TCapp2ext ${SRCS})
TARGET_LINK_LIBRARIES(TCapp2ext ${pkgs_LDFLAGS})

INSTALL(TARGETS TCapp2ext DESTINATION /usr/bin COMPONENT Runtime)

